# COdex

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
jobpipeline/app/: main.py
jobpipeline/collectors/: job_collector.py
jobpipeline/core/: cli.py  models.py  orchestrator.py
jobpipeline/dedupe/: service.py
jobpipeline/export/: excel_sync.py
jobpipeline/scoring/: service.py
jobpipeline/sources/: base.py  discovery.py  greenhouse.py  lever.py  manager.py  rss.py
jobpipeline/storage/: repository.py
jobpipeline/utils/: config.py  logging_utils.py  text.py  throttle.py
tests/: test_pipeline.py  test_ui.py
